Update: variable names for better readablity

--- a/notebooks/parse_slack_data.ipynb
+++ b/notebooks/parse_slack_data.ipynb
@@ -400,14 +400,14 @@
     "parsed_data = pd.concat(dataframes_by_folder, ignore_index=True)\n",
     "parsed_data.head(5)\n",
     "\n",
-    "reply_count_by_message = slack_parser_df.groupby('msg_content')['reply_count'].sum().reset_index(name='Reply count')\n",
+    "reply_count_by_message = parsed_data.groupby('msg_content')['reply_count'].sum().reset_index(name='Reply count')\n",
     "print(reply_count_by_message)\n",
     "\n",
-    "message_count_by_user = slack_parser_df.groupby('sender_name').size().reset_index(name='Message count')\n",
+    "message_count_by_user = parsed_data.groupby('sender_name').size().reset_index(name='Message count')\n",
     "\n",
-    "mention_count_by_user = slack_parser_df['msg_content'].str.count('@\\w+').groupby(slack_parser_df['sender_name']).sum().reset_index(name='Mention count')\n",
+    "mention_count_by_user = parsed_data['msg_content'].str.count('@\\w+').groupby(parsed_data['sender_name']).sum().reset_index(name='Mention count')\n",
     "\n",
-    "reply_count_by_user = slack_parser_df.groupby('sender_name')['reply_count'].sum().reset_index(name='Reply count')\n",
+    "reply_count_by_user = parsed_data.groupby('sender_name')['reply_count'].sum().reset_index(name='Reply count')\n",
     "\n",
     "user_stats = pd.merge(message_count_by_user, mention_count_by_user, on='sender_name', how='outer')\n",
     "user_stats = pd.merge(user_stats, reply_count_by_user, on='sender_name', how='outer')\n",
@@ -464,11 +464,12 @@
     "\n",
     "parsed_data = pd.concat(dataframes_by_folder, ignore_index=True)\n",
     "parsed_data.head(5)\n",
-    "reply_count_by_message = slack_parser_df.groupby('msg_content')['reply_count'].sum().reset_index(name='Reply count')\n",
     "\n",
-    "reaction_count_by_message = slack_parser_df.groupby('msg_content')['reply_users_count'].sum().reset_index(name='Reaction count')\n",
+    "reply_count_by_message = parsed_data.groupby('msg_content')['reply_count'].sum().reset_index(name='Reply count')\n",
     "\n",
-    "mention_count_by_message = slack_parser_df['msg_content'].str.count('@\\w+').groupby(slack_parser_df['msg_content']).sum().reset_index(name='Mention count')\n",
+    "reaction_count_by_message = parsed_data.groupby('msg_content')['reply_users_count'].sum().reset_index(name='Reaction count')\n",
+    "\n",
+    "mention_count_by_message = parsed_data['msg_content'].str.count('@\\w+').groupby(parsed_data['msg_content']).sum().reset_index(name='Mention count')\n",
     "\n",
     "message_stats = pd.merge(reply_count_by_message, reaction_count_by_message, on='msg_content', how='outer')\n",
     "message_stats = pd.merge(message_stats, mention_count_by_message, on='msg_content', how='outer')\n",
@@ -552,40 +553,23 @@
     "import seaborn as sns\n",
     "\n",
     "data_path = os.path.join(rpath, \"data/anonymized\")\n",
-    "slack_data_loader = SlackDataLoader(data_directory)\n",
-    "# List all directories in the 'data' directory\n",
-    "directories = [d for d in os.listdir(data_directory) if os.path.isdir(os.path.join(data_directory, d))]\n",
+    "data_loader = SlackDataLoader(data_directory)\n",
+    "folders = [d for d in os.listdir(data_directory) if os.path.isdir(os.path.join(data_directory, d))]\n",
     "\n",
+    "dataframes_by_folder = [data_loader.slack_parser(os.path.join(data_path, folder)).assign(folder=folder) for folder in folders]\n",
     "\n",
-    "dfs_by_directory = []\n",
-    "\n",
-    "# Iterate through each directory\n",
-    "for directory in directories:\n",
-    "    directory_path = os.path.join(data_directory, directory)\n",
-    "    df_directory = slack_data_loader.slack_parser(directory_path)\n",
-    "    \n",
-    "    # Add a 'directory' column to identify the source directory\n",
-    "    df_directory['directory'] = directory\n",
-    "    \n",
-    "    # Append the DataFrame to the list\n",
-    "    dfs_by_directory.append(df_directory)\n",
-    "\n",
-    "# Concatenate all DataFrames into a single DataFrame\n",
-    "slack_parser_df = pd.concat(dfs_by_directory, ignore_index=True)\n",
+    "parsed_data = pd.concat(dataframes_by_folder, ignore_index=True)\n",
+    "parsed_data.head(5)\n",
     "# slack_parser_df.head(5)\n",
     "\n",
-    "# Convert 'time_thread_start' and 'msg_sent_time' columns to numeric, handling errors by setting to NaN\n",
-    "slack_parser_df['time_thread_start'] = pd.to_numeric(slack_parser_df['time_thread_start'], errors='coerce')\n",
-    "slack_parser_df['msg_sent_time'] = pd.to_numeric(slack_parser_df['msg_sent_time'], errors='coerce')\n",
+    "parsed_data['time_thread_start'] = pd.to_numeric(parsed_data['time_thread_start'], errors='coerce')\n",
+    "parsed_data['msg_sent_time'] = pd.to_numeric(parsed_data['msg_sent_time'], errors='coerce')\n",
     "\n",
-    "# Calculate the time difference between the message timestamp and the first reply message for each thread\n",
-    "slack_parser_df['time_diff_first_reply'] = (slack_parser_df['time_thread_start'] - slack_parser_df['msg_sent_time']) / 60\n",
+    "parsed_data['time_diff_first_reply'] = (parsed_data['time_thread_start'] - parsed_data['msg_sent_time']) / 60\n",
     "\n",
-    "# Extract the time of the day (in 24hr format)\n",
-    "slack_parser_df['time_of_day'] = pd.to_datetime(slack_parser_df['msg_sent_time'], unit='s').dt.strftime('%H:%M')\n",
+    "parsed_data['time_of_day'] = pd.to_datetime(parsed_data['msg_sent_time'], unit='s').dt.strftime('%H:%M')\n",
     "\n",
-    "# Create a new dataframe with the calculated values\n",
-    "scatter_data = slack_parser_df[['time_diff_first_reply', 'time_of_day', 'channel']]\n",
+    "scatter_data = parsed_data[['time_diff_first_reply', 'time_of_day', 'channel']]\n",
     "\n",
     "# Plot a 2D scatter plot\n",
     "plt.figure(figsize=(12, 8))\n",
