Modified getChannels and variables in note book

--- a/notebooks/parse_slack_data.ipynb
+++ b/notebooks/parse_slack_data.ipynb
@@ -15,6 +15,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import os, sys\n",
     "import re\n",
@@ -350,23 +362,23 @@
     "import pandas as pd\n",
     "from functools import reduce\n",
     "\n",
-    "data_directory = os.path.join(rpath, \"data/anonymized\")\n",
-    "slack_data_loader = SlackDataLoader(data_directory)\n",
-    "directories = [d for d in os.listdir(data_directory) if os.path.isdir(os.path.join(data_directory, d))]\n",
+    "data_path = os.path.join(rpath, \"data/anonymized\")\n",
+    "data_loader = SlackDataLoader(data_path)\n",
+    "directories = [d for d in os.listdir(data_path) if os.path.isdir(os.path.join(data_path, d))]\n",
     "channel_name = 'all-week8'\n",
     "\n",
-    "df_by_directory = [\n",
-    "    slack_data_loader.parse_slack_reaction(os.path.join(data_directory, directory), channel_name).assign(directory=directory)\n",
+    "dataframe_by_directory = [\n",
+    "    data_loader.parse_slack_reaction(os.path.join(data_path, directory), channel_name).assign(directory=directory)\n",
     "    for directory in directories\n",
     "]\n",
     "\n",
     "# Concatenate all DataFrames into a single DataFrame\n",
-    "df_combined = reduce(lambda df1, df2: pd.concat([df1, df2], ignore_index=True), df_by_directory)\n",
+    "df_combined = reduce(lambda df1, df2: pd.concat([df1, df2], ignore_index=True), dataframe_by_directory)\n",
     "\n",
     "\n",
-    "reaction_df = pd.concat(df_by_directory, ignore_index=True)\n",
+    "reaction_df = pd.concat(dataframe_by_directory, ignore_index=True)\n",
     "\n",
-    "users_df= pd.DataFrame(slack_data_loader.get_users())\n",
+    "users_df= pd.DataFrame(data_loader.get_users())\n",
     "users_df.rename(columns={'id':'user_id'}, inplace = True)\n",
     "\n",
     "reactions_merged = pd.merge(reaction_df, users_df, on='user_id', how='outer')\n",
@@ -448,17 +460,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error loading channels: Expecting value: line 1 column 1 (char 0)\n",
+      "\n",
+      "Top 10 Messages by Reply Count:\n",
+      "                                             msg_content  Reply count\n",
+      "2304           <@u03v1am5tfa> how many crushes you have?           75\n",
+      "6051   first impression: people think i am older than...           63\n",
+      "476    1. how do i find my jupyter notebook file in m...           61\n",
+      "7475   how many here follow football so much? i think...           57\n",
+      "5915                     ethiopian new year loading ....           54\n",
+      "6775   hello\\n1. <@u03uvhcv6kb>\\n2. <@u03ug5vfn03>\\n3...           45\n",
+      "2151   <@u03uur571a5> solutions to funding account an...           44\n",
+      "13902  we had a plan to meet today 2:00 eat at friend...           36\n",
+      "120    *<!here> reminder*:timer_clock:\\n\\n*please not...           33\n",
+      "12960  the debate was great. we <@u03u1j51vfz>, <@u03...           31\n",
+      "\n",
+      "Top 10 Messages by Reaction Count:\n",
+      "                                             msg_content  Reaction count\n",
+      "12960  the debate was great. we <@u03u1j51vfz>, <@u03...              12\n",
+      "10156  let's follow each other. drop your link in thi...              11\n",
+      "1029   <!channel> do we have people who are in the sa...              11\n",
+      "6296                                    good morning all              10\n",
+      "262    *here are some other stories from people that ...              10\n",
+      "7475   how many here follow football so much? i think...              10\n",
+      "1189   <!here>, aws instance is being setup for every...               8\n",
+      "4096   _interpreters study group_\\nhello, i am starti...               8\n",
+      "14501    which teams are we supporting in the world cup?               8\n",
+      "11019    nothing. my partner deserves to know everything               8\n",
+      "\n",
+      "Top 10 Messages by Mention Count:\n",
+      "                                             msg_content  Mention count\n",
+      "7614   i am grateful for <@u03u93gnnvb>, <@u03uun8m4r...             25\n",
+      "10079  knowing <!here> is just great one way or the o...             20\n",
+      "7617   i am grateful to <@u03u9db7reg> for answering ...             17\n",
+      "505    1. work ethic\\n2. how communication and openne...             16\n",
+      "2200   <@u03uvhcv6kb> <@u03uup56mdf> <@u03ujgrn5e0> <...             13\n",
+      "12745  thanks to the team <@u03up7v9q57> <@u03ukl27b0...             12\n",
+      "10719  news news *<!here>*........:drum_with_drumstic...              9\n",
+      "2201   <@u03uvhcv6kb> <@u03v61vgqg0> <@u03ujgrn5e0> <...              8\n",
+      "6775   hello\\n1. <@u03uvhcv6kb>\\n2. <@u03ug5vfn03>\\n3...              8\n",
+      "6607    happy birthday <@u03ug4q7v42> and <@u03ug32j3pc>              8\n"
+     ]
+    }
+   ],
    "source": [
     "#What are the top 10 messages by \n",
     "    # Replies?\n",
     "    # Reactions?\n",
     "    # Mentions?\n",
     "data_path = os.path.join(rpath, \"data/anonymized\")\n",
-    "data_loader = SlackDataLoader(data_directory)\n",
-    "folders = [d for d in os.listdir(data_directory) if os.path.isdir(os.path.join(data_directory, d))]\n",
+    "data_loader = SlackDataLoader(data_path)\n",
+    "folders = [d for d in os.listdir(data_path) if os.path.isdir(os.path.join(data_path, d))]\n",
     "\n",
     "dataframes_by_folder = [data_loader.slack_parser(os.path.join(data_path, folder)).assign(folder=folder) for folder in folders]\n",
     "\n",
@@ -509,8 +568,8 @@
     "import seaborn as sns\n",
     "\n",
     "data_path = os.path.join(rpath, \"data/anonymized\")\n",
-    "data_loader = SlackDataLoader(data_directory)\n",
-    "folders = [d for d in os.listdir(data_directory) if os.path.isdir(os.path.join(data_directory, d))]\n",
+    "data_loader = SlackDataLoader(data_path)\n",
+    "folders = [d for d in os.listdir(data_path) if os.path.isdir(os.path.join(data_path, d))]\n",
     "\n",
     "dataframes_by_folder = [data_loader.slack_parser(os.path.join(data_path, folder)).assign(folder=folder) for folder in folders]\n",
     "\n",
@@ -553,8 +612,8 @@
     "import seaborn as sns\n",
     "\n",
     "data_path = os.path.join(rpath, \"data/anonymized\")\n",
-    "data_loader = SlackDataLoader(data_directory)\n",
-    "folders = [d for d in os.listdir(data_directory) if os.path.isdir(os.path.join(data_directory, d))]\n",
+    "data_loader = SlackDataLoader(data_path)\n",
+    "folders = [d for d in os.listdir(data_path) if os.path.isdir(os.path.join(data_path, d))]\n",
     "\n",
     "dataframes_by_folder = [data_loader.slack_parser(os.path.join(data_path, folder)).assign(folder=folder) for folder in folders]\n",
     "\n",
@@ -578,6 +637,42 @@
     "# Display the plot\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Minimum Essential To Do: Task 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Test for slack_parser method\n",
+    "# import unittest\n",
+    "# test_path = os.path.join(rpath, \"tests\")\n",
+    "\n",
+    "# # Load the test suite\n",
+    "# loader = unittest.TestLoader()\n",
+    "# suite = loader.discover('path/to/tests', pattern='test_*.py')\n",
+    "\n",
+    "# # Run the tests\n",
+    "# runner = unittest.TextTestRunner()\n",
+    "# result = runner.run(suite)\n",
+    "\n",
+    "# # Check the test result\n",
+    "# result.wasSuccessful()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
