Fix: Variable mistmatch error

--- a/notebooks/parse_slack_data.ipynb
+++ b/notebooks/parse_slack_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,9 +352,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error loading channels: Expecting value: line 1 column 1 (char 0)\n",
+      "             real_name total_reaction_count\n",
+      "0     Albert Rodriguez                    0\n",
+      "45          Mary Allen                    0\n",
+      "51  Michelle Henderson                    0\n",
+      "50      Michael Fowler                    0\n",
+      "49      Melissa Gordon                    0\n",
+      "48        Melanie Cole                    0\n",
+      "47   Matthew Rodriguez                    0\n",
+      "46    Mason Harrington                    0\n",
+      "44        Maria Martin                    0\n",
+      "53       Nicole Medina                    0\n",
+      "             real_name total_reaction_count\n",
+      "0     Albert Rodriguez                    0\n",
+      "50      Michael Fowler                    0\n",
+      "49      Melissa Gordon                    0\n",
+      "48        Melanie Cole                    0\n",
+      "47   Matthew Rodriguez                    0\n",
+      "46    Mason Harrington                    0\n",
+      "45          Mary Allen                    0\n",
+      "51  Michelle Henderson                    0\n",
+      "44        Maria Martin                    0\n",
+      "42       Lynn Shepherd                    0\n"
+     ]
+    }
+   ],
    "source": [
     "# Who are the top and bottom 10  users by:\n",
     "    # Reaction count?\n",
@@ -394,9 +424,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'data_directory' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/micky/Documents/ten-academy/week0_network_analysis_project/notebooks/parse_slack_data.ipynb Cell 14\u001b[0m line \u001b[0;36m7\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/micky/Documents/ten-academy/week0_network_analysis_project/notebooks/parse_slack_data.ipynb#Y142sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Who are the top and bottom 10  users by:\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/micky/Documents/ten-academy/week0_network_analysis_project/notebooks/parse_slack_data.ipynb#Y142sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m         \u001b[39m# Reply count? \u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/micky/Documents/ten-academy/week0_network_analysis_project/notebooks/parse_slack_data.ipynb#Y142sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m         \u001b[39m# Mention? \u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/micky/Documents/ten-academy/week0_network_analysis_project/notebooks/parse_slack_data.ipynb#Y142sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m         \u001b[39m# Message count? \u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/micky/Documents/ten-academy/week0_network_analysis_project/notebooks/parse_slack_data.ipynb#Y142sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m data_path \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(rpath, \u001b[39m\"\u001b[39m\u001b[39mdata/anonymized\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/micky/Documents/ten-academy/week0_network_analysis_project/notebooks/parse_slack_data.ipynb#Y142sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m data_loader \u001b[39m=\u001b[39m SlackDataLoader(data_directory)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/micky/Documents/ten-academy/week0_network_analysis_project/notebooks/parse_slack_data.ipynb#Y142sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m folders \u001b[39m=\u001b[39m [d \u001b[39mfor\u001b[39;00m d \u001b[39min\u001b[39;00m os\u001b[39m.\u001b[39mlistdir(data_directory) \u001b[39mif\u001b[39;00m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39misdir(os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(data_directory, d))]\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/micky/Documents/ten-academy/week0_network_analysis_project/notebooks/parse_slack_data.ipynb#Y142sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m dataframes_by_folder \u001b[39m=\u001b[39m [data_loader\u001b[39m.\u001b[39mslack_parser(os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(data_path, folder))\u001b[39m.\u001b[39massign(folder\u001b[39m=\u001b[39mfolder) \u001b[39mfor\u001b[39;00m folder \u001b[39min\u001b[39;00m folders]\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'data_directory' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Who are the top and bottom 10  users by:\n",
     "        # Reply count? \n",
@@ -404,8 +446,8 @@
     "        # Message count? \n",
     "\n",
     "data_path = os.path.join(rpath, \"data/anonymized\")\n",
-    "data_loader = SlackDataLoader(data_directory)\n",
-    "folders = [d for d in os.listdir(data_directory) if os.path.isdir(os.path.join(data_directory, d))]\n",
+    "data_loader = SlackDataLoader(data_path)\n",
+    "folders = [d for d in os.listdir(data_path) if os.path.isdir(os.path.join(data_path, d))]\n",
     "\n",
     "dataframes_by_folder = [data_loader.slack_parser(os.path.join(data_path, folder)).assign(folder=folder) for folder in folders]\n",
     "\n",
@@ -460,56 +502,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error loading channels: Expecting value: line 1 column 1 (char 0)\n",
-      "\n",
-      "Top 10 Messages by Reply Count:\n",
-      "                                             msg_content  Reply count\n",
-      "2304           <@u03v1am5tfa> how many crushes you have?           75\n",
-      "6051   first impression: people think i am older than...           63\n",
-      "476    1. how do i find my jupyter notebook file in m...           61\n",
-      "7475   how many here follow football so much? i think...           57\n",
-      "5915                     ethiopian new year loading ....           54\n",
-      "6775   hello\\n1. <@u03uvhcv6kb>\\n2. <@u03ug5vfn03>\\n3...           45\n",
-      "2151   <@u03uur571a5> solutions to funding account an...           44\n",
-      "13902  we had a plan to meet today 2:00 eat at friend...           36\n",
-      "120    *<!here> reminder*:timer_clock:\\n\\n*please not...           33\n",
-      "12960  the debate was great. we <@u03u1j51vfz>, <@u03...           31\n",
-      "\n",
-      "Top 10 Messages by Reaction Count:\n",
-      "                                             msg_content  Reaction count\n",
-      "12960  the debate was great. we <@u03u1j51vfz>, <@u03...              12\n",
-      "10156  let's follow each other. drop your link in thi...              11\n",
-      "1029   <!channel> do we have people who are in the sa...              11\n",
-      "6296                                    good morning all              10\n",
-      "262    *here are some other stories from people that ...              10\n",
-      "7475   how many here follow football so much? i think...              10\n",
-      "1189   <!here>, aws instance is being setup for every...               8\n",
-      "4096   _interpreters study group_\\nhello, i am starti...               8\n",
-      "14501    which teams are we supporting in the world cup?               8\n",
-      "11019    nothing. my partner deserves to know everything               8\n",
-      "\n",
-      "Top 10 Messages by Mention Count:\n",
-      "                                             msg_content  Mention count\n",
-      "7614   i am grateful for <@u03u93gnnvb>, <@u03uun8m4r...             25\n",
-      "10079  knowing <!here> is just great one way or the o...             20\n",
-      "7617   i am grateful to <@u03u9db7reg> for answering ...             17\n",
-      "505    1. work ethic\\n2. how communication and openne...             16\n",
-      "2200   <@u03uvhcv6kb> <@u03uup56mdf> <@u03ujgrn5e0> <...             13\n",
-      "12745  thanks to the team <@u03up7v9q57> <@u03ukl27b0...             12\n",
-      "10719  news news *<!here>*........:drum_with_drumstic...              9\n",
-      "2201   <@u03uvhcv6kb> <@u03v61vgqg0> <@u03ujgrn5e0> <...              8\n",
-      "6775   hello\\n1. <@u03uvhcv6kb>\\n2. <@u03ug5vfn03>\\n3...              8\n",
-      "6607    happy birthday <@u03ug4q7v42> and <@u03ug32j3pc>              8\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#What are the top 10 messages by \n",
     "    # Replies?\n",
