--- a/notebooks/parse_slack_data.ipynb
+++ b/notebooks/parse_slack_data.ipynb
@@ -405,6 +405,7 @@
     "\n",
     "data_path = os.path.join(rpath, \"data/anonymized\")\n",
     "data_loader = SlackDataLoader(data_path)\n",
+    "# fix variable typo\n",
     "folders = [d for d in os.listdir(data_path) if os.path.isdir(os.path.join(data_path, d))]\n",
     "\n",
     "dataframes_by_folder = [data_loader.slack_parser(os.path.join(data_path, folder)).assign(folder=folder) for folder in folders]\n",
