Fix: Variable Typo issue [path_var]

--- a/notebooks/parse_slack_data.ipynb
+++ b/notebooks/parse_slack_data.ipynb
@@ -404,8 +404,8 @@
     "        # Message count? \n",
     "\n",
     "data_path = os.path.join(rpath, \"data/anonymized\")\n",
-    "data_loader = SlackDataLoader(data_directory)\n",
-    "folders = [d for d in os.listdir(data_directory) if os.path.isdir(os.path.join(data_directory, d))]\n",
+    "data_loader = SlackDataLoader(data_path)\n",
+    "folders = [d for d in os.listdir(data_path) if os.path.isdir(os.path.join(data_path, d))]\n",
     "\n",
     "dataframes_by_folder = [data_loader.slack_parser(os.path.join(data_path, folder)).assign(folder=folder) for folder in folders]\n",
     "\n",
