Time Analysis and ML Model Development:
- Investigated time differences between messages, replies, reactions, and events.
- Created histograms for message, reply, reaction, and overall event distributions.
- Developed ML models for classification, topic modeling, and sentiment analysis.
- Addressed data cleaning challenges for accurate model input.
- Applied topic modeling to identify top 10 topics in different channels.
- Conducted sentiment analysis on grouped messages for time series trends.
- Implemented MLFlow for versioning and traceability.

--- a/notebooks/parse_slack_data.ipynb
+++ b/notebooks/parse_slack_data.ipynb
@@ -36,12 +36,47 @@
     "from collections import Counter\n",
     "from sklearn import svm\n",
     "\n",
+    "\n",
     "import pandas as pd\n",
     "from matplotlib import pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
     "from nltk.corpus import stopwords\n",
-    "from wordcloud import WordCloud"
+    "from wordcloud import WordCloud\n",
+    "# !pip install gensim\n",
+    "# !conda install -y -c conda-forge gensim\n",
+    "# !pip install pyLDAvis\n",
+    "# !pip install nltk\n",
+    "\n",
+    "# !conda install -y -c conda-forge pyldavis\n",
+    "# !pip install textblob\n",
+    "# !pip install mlflow\n",
+    "\n",
+    "\n",
+    "\n",
+    "# import pyLDAvis.gensim_models as gensimvis\n",
+    "import pyLDAvis.gensim_models as gensimvis\n",
+    "import pyLDAvis\n",
+    "from gensim.models import LdaModel\n",
+    "from gensim.corpora import Dictionary\n",
+    "\n",
+    "from textblob import TextBlob\n",
+    "import matplotlib.pyplot as plt\n",
+    "import mlflow\n",
+    "\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "from nltk.stem import WordNetLemmatizer\n",
+    "# from textblob import TextBlob\n",
+    "\n",
+    "import nltk\n",
+    "nltk.download('stopwords')\n",
+    "nltk.download('punkt')\n",
+    "nltk.download('wordnet')\n",
+    "\n",
+    "\n",
+    "from gensim.corpora import Dictionary\n",
+    "from gensim.models import LdaModel\n"
    ]
   },
   {
@@ -389,6 +424,7 @@
     "bottom_10_reactions = reactions_merged.groupby('real_name')['reaction_count'].sum().reset_index(name='total_reaction_count').sort_values(by='total_reaction_count', ascending=True).head(10)\n",
     "\n",
     "print(top_10_reactions)\n",
+    "print(\" \")\n",
     "print(bottom_10_reactions)\n"
    ]
   },
@@ -604,20 +640,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Test for slack_parser method\n",
-    "# import unittest\n",
-    "# test_path = os.path.join(rpath, \"tests\")\n",
+    "# Test for slack_parser method\n",
+    "import unittest\n",
+    "test_path = os.path.join(rpath, \"tests\")\n",
     "\n",
-    "# # Load the test suite\n",
-    "# loader = unittest.TestLoader()\n",
-    "# suite = loader.discover('path/to/tests', pattern='test_*.py')\n",
+    "# Load the test suite\n",
+    "loader = unittest.TestLoader()\n",
+    "suite = loader.discover(test_path, pattern='test_*.py')\n",
     "\n",
-    "# # Run the tests\n",
-    "# runner = unittest.TextTestRunner()\n",
-    "# result = runner.run(suite)\n",
+    "# Run the tests\n",
+    "runner = unittest.TextTestRunner()\n",
+    "result = runner.run(suite)\n",
     "\n",
-    "# # Check the test result\n",
-    "# result.wasSuccessful()"
+    "# Check the test result\n",
+    "result.wasSuccessful()"
    ]
   },
   {
@@ -625,7 +661,197 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Answer the following question \n",
+    "# What is the distribution of time differences between messages, replies, reactions, and any type event (message, reply, reaction)?\n",
+    "# Plot a histogram of the time difference between \n",
+    "# Consecutive messages \n",
+    "# Consecutive replies \n",
+    "# Consecutive reactions\n",
+    "# Consecutive events (message, reply, reaction)\n",
+    "\n",
+    "\n",
+    "parsed_data['msg_sent_time'] = utils.convert_2_timestamp('msg_sent_time', parsed_data)\n",
+    "parsed_data['msg_sent_time'] = pd.to_datetime(parsed_data['msg_sent_time'])\n",
+    "\n",
+    "parsed_data = parsed_data.sort_values(by='msg_sent_time')\n",
+    "\n",
+    "parsed_data['time_diff_messages'] = parsed_data['msg_sent_time'].diff()\n",
+    "parsed_data['time_diff_replies'] = parsed_data[parsed_data['msg_type'] == 'reply']['msg_sent_time'].diff()\n",
+    "parsed_data['time_diff_reactions'] = parsed_data[parsed_data['msg_type'] == 'reaction']['msg_sent_time'].diff()\n",
+    "parsed_data['time_diff_events'] = parsed_data['msg_sent_time'].diff()\n",
+    "\n",
+    "fig, axes = plt.subplots(2, 2, figsize=(12, 10))\n",
+    "\n",
+    "# Consecutive messages\n",
+    "sns.histplot(parsed_data['time_diff_messages'].dt.total_seconds(), bins=50, ax=axes[0, 0])\n",
+    "axes[0, 0].set_title('Time Difference Between Consecutive Messages')\n",
+    "axes[0, 0].set_xlabel('Time Difference (seconds)')\n",
+    "axes[0, 0].set_ylabel('Frequency')\n",
+    "\n",
+    "# Consecutive replies\n",
+    "sns.histplot(parsed_data['time_diff_replies'].dt.total_seconds(), bins=50, ax=axes[0, 1])\n",
+    "axes[0, 1].set_title('Time Difference Between Consecutive Replies')\n",
+    "axes[0, 1].set_xlabel('Time Difference (seconds)')\n",
+    "axes[0, 1].set_ylabel('Frequency')\n",
+    "\n",
+    "# Consecutive reactions\n",
+    "sns.histplot(parsed_data['time_diff_reactions'].dt.total_seconds(), bins=50, ax=axes[1, 0])\n",
+    "axes[1, 0].set_title('Time Difference Between Consecutive Reactions')\n",
+    "axes[1, 0].set_xlabel('Time Difference (seconds)')\n",
+    "axes[1, 0].set_ylabel('Frequency')\n",
+    "\n",
+    "# Consecutive events\n",
+    "sns.histplot(parsed_data['time_diff_events'].dt.total_seconds(), bins=50, ax=axes[1, 1])\n",
+    "axes[1, 1].set_title('Time Difference Between Consecutive Events')\n",
+    "axes[1, 1].set_xlabel('Time Difference (seconds)')\n",
+    "axes[1, 1].set_ylabel('Frequency')\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "data_path = os.path.join(rpath, \"data/anonymized\")\n",
+    "data_loader = SlackDataLoader(data_path)\n",
+    "folders = [d for d in os.listdir(data_path) if os.path.isdir(os.path.join(data_path, d))]\n",
+    "\n",
+    "dataframes_by_folder = [data_loader.slack_parser(os.path.join(data_path, folder)).assign(folder=folder) for folder in folders]\n",
+    "\n",
+    "parsed_data = pd.concat(dataframes_by_folder, ignore_index=True)\n",
+    "parsed_data.head(200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stop_words = set(stopwords.words(\"english\"))\n",
+    "lemmatizer = WordNetLemmatizer()\n",
+    "\n",
+    "def preprocess_text(text):\n",
+    "    tokens = word_tokenize(text.lower())\n",
+    "    tokens = [lemmatizer.lemmatize(token) for token in tokens if token.isalpha()]\n",
+    "    tokens = [token for token in tokens if token not in stop_words]\n",
+    "    return tokens\n",
+    "\n",
+    "# Apply the preprocessing to 'msg_content'\n",
+    "parsed_data['preprocessed_text'] = parsed_data['msg_content'].apply(preprocess_text)\n",
+    "\n",
+    "# Create dictionary and corpus\n",
+    "dictionary = Dictionary(parsed_data['preprocessed_text'])\n",
+    "corpus = [dictionary.doc2bow(text) for text in parsed_data['preprocessed_text']]\n",
+    "\n",
+    "print(f\"Message Content after preprocessing: {parsed_data['preprocessed_text']}\")\n",
+    "print(\" \")\n",
+    "print(\"Printing Dictionary\")\n",
+    "print(dictionary)\n",
+    "print(corpus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# lda\n",
+    "number_of_topics = 5\n",
+    "lda_model = LdaModel(corpus=corpus, num_topics=number_of_topics, id2word=dictionary, passes=15, random_state=42)\n",
+    "\n",
+    "# Print topics and associated words\n",
+    "topics = lda_model.print_topics(num_words=10)\n",
+    "# for topic in topics:\n",
+    "#     print(topic)\n",
+    "\n",
+    "\n",
+    "print(lda_model.show_topics(formatted=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  Sentiment analysis\n",
+    "\n",
+    "pyLDAvis.enable_notebook()\n",
+    "vis_data = gensimvis.prepare(lda_model, corpus, dictionary)\n",
+    "\n",
+    "# Display the visualization\n",
+    "pyLDAvis.display(vis_data)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 1: Group messages by day since the start of the training\n",
+    "parsed_data['msg_sent_time'] = pd.to_datetime(parsed_data['msg_sent_time'], unit='s')\n",
+    "parsed_data['day_since_start'] = (parsed_data['msg_sent_time'] - parsed_data['msg_sent_time'].min()).dt.days\n",
+    "grouped_by_day = parsed_data.groupby('day_since_start')\n",
+    "\n",
+    "# Step 2: Concatenate messages for each day\n",
+    "aggregated_messages = grouped_by_day['msg_content'].apply(lambda x: ' '.join(x)).reset_index()\n",
+    "\n",
+    "# Step 3: Perform sentiment analysis\n",
+    "aggregated_messages['sentiment'] = aggregated_messages['msg_content'].apply(lambda x: TextBlob(x).sentiment.polarity)\n",
+    "\n",
+    "# Step 4: Analyze the time series trend of sentiments\n",
+    "plt.plot(aggregated_messages['day_since_start'], aggregated_messages['sentiment'])\n",
+    "plt.xlabel('Days Since Start')\n",
+    "plt.ylabel('Sentiment Polarity')\n",
+    "plt.title('Sentiment Trend Over Time')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Not finished\n",
+    "\n",
+    "artifacts_dir = os.path.join(rpath, \"artifacts\")\n",
+    "if not os.path.exists(artifacts_dir):\n",
+    "    os.makedirs(artifacts_dir)\n",
+    "\n",
+    "# Start MLflow run\n",
+    "with mlflow.start_run() as run:\n",
+    "    # Log hyperparameters\n",
+    "    number_of_topics = 5\n",
+    "    mlflow.log_param(\"num_topics\", number_of_topics)\n",
+    "    mlflow.log_param(\"passes\", 15)\n",
+    "    mlflow.log_param(\"random_state\", 42)\n",
+    "\n",
+    "    # Train LDA model\n",
+    "    lda_model = LdaModel(corpus=corpus, num_topics=number_of_topics, id2word=dictionary, passes=15, random_state=42)\n",
+    "\n",
+    "    # Log the LDA model\n",
+    "    mlflow.sklearn.log_model(lda_model, \"lda_model\")\n",
+    "\n",
+    "    # Save artifacts (dictionary and corpus)\n",
+    "    mlflow.log_artifact(\"artifacts/dictionary.pkl\", \"artifacts\")\n",
+    "    mlflow.log_artifact(\"artifacts/corpus.pkl\", \"artifacts\")\n",
+    "\n",
+    "# Retrieve the run_id\n",
+    "run_id = run.info.run_id\n",
+    "print(\"Run ID:\", run_id)\n"
+   ]
   }
  ],
  "metadata": {
